[metadata]
name = napari-mini-unwarp
version = 0.0.1
author = Horst A. Obenhaus
author_email = hobenhaus@gmail.com
url = https://github.com/horsto/napari-mini-unwarp.git
license = MIT
description = Unwarping plugin for creating piecewise affine transformations
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License


[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    scipy
    tifffile
    git+https://github.com/kavli-ntnu/scanreader.git
    pointpats

[options.packages.find]
where = src

[options.package_data]
napari-mini-unwarp = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-mini-unwarp = napari_mini_unwarp:napari.yaml
